--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -138,7 +138,7 @@ $legend-font-size: 16px !default;
 $line-height-small:  14px !default;
 $line-height:  16px !default;
 $line-height-large:  20px !default;
-$line-height-huge:  24px !default;
+$line-height-huge:  27px !default;
 
 $occupants-padding: 1em;
 
